# ScreenLogger

./: .gitignore  LICENSE  README.md  gradle.properties
app/: debug.keystore  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fork_process.cpp  fork_process.h  native-lib.cpp  screen_monitor.cpp
app/src/main/java/com/example/screenlogger/: BootReceiver.java  DatabaseHelper.java  ForkedProcess.java  MainActivity.java  NativeProcessManager.java  ProcessControlFragment.java  ScreenEventsAdapter.java  ScreenStateReceiver.java  ScreenStateService.java  TableFragment.java  TimelineFragment.java  TimelineView.java
app/src/main/res/drawable/: controls_background.xml  logs_background.xml  process_status_background.xml
app/src/main/res/layout/: activity_main.xml  event_item_row.xml  fragment_process_control.xml  fragment_table.xml  fragment_timeline.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
